# pg_plumbing

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/dump/: catalog.rs  custom_format.rs  directory_format.rs  filter.rs  format.rs  mod.rs
src/restore/: mod.rs  parallel.rs  parse.rs
tests/: README.md  pg_dump_tests.rs  pg_restore_tests.rs
tests/common/: mod.rs
tests/pg_dump/: mod.rs  t001_basic.rs  t002_pg_dump.rs  t003_pg_dump_with_server.rs  t004_pg_dump_parallel.rs  t005_dir_format_dedup.rs  t006_custom_format_hardening.rs  t010_dump_connstr.rs
tests/pg_restore/: mod.rs  restore_basic.rs
