# Copyright 2026 pg_plumbing contributors
# SPDX-License-Identifier: MIT

[package]
name = "pg_plumbing"
version = "0.1.0"
edition = "2021"
description = "pg_dump/pg_restore rewritten in Rust"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
