# Copyright 2026 pg_plumbing contributors
# SPDX-License-Identifier: MIT

[package]
name = "pg_plumbing"
version = "0.1.0"
edition = "2021"
description = "pg_dump/pg_restore rewritten in Rust"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

[[bin]]
name = "pg_dump"
path = "src/bin/pg_dump.rs"

[[bin]]
name = "pg_restore"
path = "src/bin/pg_restore.rs"

[[bin]]
name = "pg_plumbing"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
